test/corpus/fail/M0175.mo
=========
M0175.mo
=========

to_candid ([var 1])

---

(source_file
  (exp_dec
    (to_candid_exp
      (array_exp
        (lit_exp
          (int_literal))))))
